Added requirements-maven-plugin:unpack for unpacking native libraries. Added StringVerifier.asUrl(), UriVerifier.asUrl(), UrlVerifier. OperatingSystem.detect() now throws an exception on unsupported platforms. Added OperatingSystem.architecture.